move code for traffic graph to correct function; fix header if STATUSGRAPH_INTERVAL is undefined, reduce graph spacing

--- a/mailscanner/style.css
+++ b/mailscanner/style.css
@@ -932,4 +932,6 @@ select.lang > option {
 #trafficgraph {
     width: auto;
     height: 180px;
+    margin-top: -4px;
+    margin-bottom: -13px;
 }
